# csspark-chrome-ext

./: .gitignore  README.md  concept.md  howtouse.md  package.json  pnpm-lock.yaml
apps/browser-extension/: package.json  sidepanel.html  tsconfig.json  vite.config.ts
apps/browser-extension/public/: manifest.json
apps/browser-extension/src/: background.ts  content-script.ts  sidepanel.css  sidepanel.tsx  types.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/resources/broker/: server.mjs
apps/desktop/src-tauri/src/: main.rs
docs/: DEVELOPMENT.md  PRD.md
