[package]
name = "codex-spark-app"
version = "0.1.0"
description = "Personal Codex Spark desktop assistant"
authors = ["kimsy"]
edition = "2021"

[lib]
name = "codex_spark_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
